@@ -151,8 +151,8 @@ gboolean async_play_iter(void *data)
     printf("state = %i\n", gmtk_media_player_get_state(GMTK_MEDIA_PLAYER(media)));
     if (gmtk_media_player_get_state(GMTK_MEDIA_PLAYER(media)) == MEDIA_STATE_UNKNOWN) {
         play_iter(next_iter, 0);
-		next_iter = NULL;
-	}
+        next_iter = NULL;
+    }
 
     return FALSE;
 }
